--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,27 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+  beforeinstall:
+    machine: #Runner Type, it can be docker, machine ...
+      image: ubuntu-2004:202010-01
+      docker_layer_caching: true #Gives the docker environment too (It caches the image layers).
+    resource_class: medium
     steps:
-      - checkout
+      - checkout_and_pre-install
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
+          name: "install google cloud sdk"
+          command: |
+            sudo apt-get update & sudo apt-get install -y curl wget
+            curl https://sdk.cloud.google.com | bash > /dev/null;
+            source $HOME/google-cloud-sdk/path.bash.inc
+            sudo gcloud --quit components update 
+            sudo gcloud --quit components update kubectl
+            echo ${GCLOUD_SERVICE_KEY} | gcloud auth activate-service-account --key-file=-
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  before_install_job:
     jobs:
-      - say-hello
+      - beforeinstall
