--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,11 @@ jobs:
       - run:
           name: "install google cloud sdk"
           command: |
-            sudo apt-get update & sudo apt-get install -y curl wget
-            curl https://sdk.cloud.google.com | bash > /dev/null;
-            source $HOME/google-cloud-sdk/path.bash.inc
+            sudo apt-get update & sudo apt-get install -y curl
+            export CLOUD_SDK_REPO="cloud-sdk-(lsb_release -c -s)"
+            echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list"
+            curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+            sudo apt-get update && sudo apt-get install -y google-cloud-sdk
             sudo gcloud --quit components update 
             sudo gcloud --quit components update kubectl
             echo ${GCLOUD_SERVICE_KEY} | gcloud auth activate-service-account --key-file=-
