--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,24 +10,14 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "install & authenticate google cloud sdk"
-          command: |
-            sudo apt-get update & sudo apt-get install -y curl
-            export CLOUD_SDK_REPO="cloud-sdk-(lsb_release -c -s)"
-            echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list"
-            curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
-            sudo apt-get update && sudo apt-get install -y google-cloud-sdk
-            sudo gcloud --quiet components update 
-            sudo gcloud --quiet components update kubectl
-            echo ${GCLOUD_SERVICE_KEY} | gcloud auth activate-service-account --key-file=-
-            gcloud config set project ${GOOGLE_PROJECT_ID}
-            gcloud config set compute/zone ${GCLOUD_COMPUTE_ZONE}
-            gcloud container clusters get-credentials ${GCLOUD_CLUSTER_NAME} 
-            gcloud projects list --sort-by=projectId --limit=5
-      - run:
-          name: Docker Login
+          name: Docker Login and build client for tests
           command: | 
             echo ${DOCKER_PASSWORD} | docker login -u ${DOCKER_USERNAME} --password-stdin
+            docker build -t sonergezgen/client -f ./client/Dockerfile.dev ./client
+      - run:
+          name: Run Tests
+          command: |
+            docker run sonergezgen/client npm test -- --coverage
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
