--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,9 +15,12 @@ jobs:
             echo ${DOCKER_PASSWORD} | docker login -u ${DOCKER_USERNAME} --password-stdin
             docker build -t sonergezgen/client -f ./client/Dockerfile.dev ./client
       - run:
+          name: npm ci
+          command: 
+      - run:
           name: Run Tests
           command: |
-            docker run sonergezgen/client timeout 60 npm test -- --coverage
+            docker run sonergezgen/client timeout 30 npm test -- --coverage --exit
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
