--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
-    "test": "CI=true react-scripts test --watch-all",
+    "test": "CI=true react-scripts test --watch=all",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
