--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "CI=true react-scripts test --watch=all",
     "eject": "react-scripts eject"
   },
