--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,13 +45,9 @@ jobs:
             docker build -t sonergezgen/multi-client:${BUILD_ID} -f ./client/Dockerfile ./client
             docker build -t sonergezgen/multi-server:${BUILD_ID} -f ./server/Dockerfile ./server
             docker build -t sonergezgen/multi-worker:${BUILD_ID} -f ./worker/Dockerfile ./worker
+            docker images 
 
-      - run:
-          name: Docker Push new Image build with tags.
-          command: |
-            docker push sonergezgen/multi-client:${BUILD_ID}
-            docker push sonergezgen/multi-server:${BUILD_ID}
-            docker push sonergezgen/multi-worker:${BUILD_ID}
+
 
 
 
