--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,10 @@ version: 2.1
 #  CLOUDSDK_CORE_DISABLE_PROMPTS: '1'
 jobs:
   Run_Tests_before:
-    docker: 
-      - image: ubuntu:latest
+    machine: #Runner Type, it can be docker, machine ...
+      image: ubuntu-2004:202010-01
+      docker_layer_caching: true #Gives the docker environment too (It cache the image layers).
+    resource_class: medium
     steps:
       - run:
           name: Run Tests
