--- a/k8_files/issuer.yaml
+++ b/k8_files/issuer.yaml
@@ -10,4 +10,7 @@ spec:
     email: 'soner.gzn94@gmail.com'
     privateKeySecretRef:
       name: letsencrypt-prod
-    http01: {}
+    solvers:
+    - http01:
+        ingress:
+          class: nginx
