--- a/k8_files/certificate.yaml
+++ b/k8_files/certificate.yaml
@@ -13,10 +13,10 @@ spec:
   dnsNames:
     - dev.k8-multi.com
     - www.dev.k8-multi.com
-  acme:
-    config:
-      - http01:
-          ingressClass: nginx
-        domains:
-          - dev.k8-multi.com
-          - www.dev.k8-multi.com
+  #acme:
+  #  config:
+  #    - http01:
+  #        ingressClass: nginx
+  #      domains:
+  #        - dev.k8-multi.com
+  #        - www.dev.k8-multi.com
