--- a/k8_files/issuer.yaml
+++ b/k8_files/issuer.yaml
@@ -9,8 +9,9 @@ spec:
     server: https://acme-v02.api.letsencrypt.org/directory
     email: 'soner.gzn94@gmail.com'
     privateKeySecretRef:
-      name: letsencrypt-cluster-issuer-key #will be auto-generated
+      name: letsencrypt-cluster-issuer-key #will be aut
     solvers:
     - http01:
         ingress:
           class: nginx
+      selector: {}
