--- a/k8_files/ingress-service.yaml
+++ b/k8_files/ingress-service.yaml
@@ -6,8 +6,9 @@ metadata:
     kubernetes.io/ingress.class: nginx #Simple telling that we want to create ingress based on nginx project
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/use-regex: 'true'
+    certmanager.k8s.io/cluster-issuer: letsencryp
+    certmanager.k8s.io/acme-challenge-type: http01
     #cert-manager.io/issuer: "letsencrypt-prod"
-    #networking.gke.io/managed-certificates: dev-k8-multi-com-certificate
 spec:
   tls:
     - hosts:
