--- a/k8_files/issuer.yaml
+++ b/k8_files/issuer.yaml
@@ -1,17 +1,18 @@
 #purpose of this document: Where the Cert-manager that we've installed should go to get the Certificate (Let's encrypt in this case)
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-cluster-issuer
-  namespace: cert-manager
-spec:
-  acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
-    email: 'soner.gzn94@gmail.com'
-    privateKeySecretRef:
-      name: letsencrypt-cluster-issuer-key #will be auto-generated
-    solvers:
-    - http01:
-        ingress:
-          class: nginx
-      selector: {}
+#apiVersion: cert-manager.io/v1
+#kind: ClusterIssuer
+#metadata:
+#  name: letsencrypt-cluster-issuer
+#  namespace: cert-manager
+#spec:
+#  acme:
+#    server: https://acme-v02.api.letsencrypt.org/directory
+#    email: 'soner.gzn94@gmail.com'
+#    privateKeySecretRef:
+#      name: letsencrypt-cluster-issuer-key #will be auto-generated
+#    solvers:
+#    - http01:
+#        ingress:
+#          class: nginx
+#      selector: {}
+
