--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
           name: Deployment for Kubernetes
           command: |
             export BUILD_ID=$(echo ${CIRCLE_BUILD_URL} | cut -d'/' -f 7)
-            #kubectl apply -f k8_files
+            kubectl apply -f k8_files
             kubectl set image deployments/client-deployment client=sonergezgen/multi-client:${BUILD_ID}
             kubectl set image deployments/server-deployment server=sonergezgen/multi-server:${BUILD_ID}
             kubectl set image deployments/worker-deployment worker=sonergezgen/multi-worker:${BUILD_ID}
