--- a/k8_files/redis-deployment.yaml
+++ b/k8_files/redis-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec: 
       containers:
       - name: redis
-        image: redis
+        image: redis:latest
         ports:
         - containerPort: 6379
