--- a/k8_files/worker-deployment.yaml
+++ b/k8_files/worker-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: worker
-        image: sonergezgen/multi-worker
+        image: sonergezgen/multi-worker:latest
         env:
         - name: REDIS_HOST
           value: redis-cluster-ip-service
