--- a/environments/PROD/multi-k8/kustomization.yaml
+++ b/environments/PROD/multi-k8/kustomization.yaml
@@ -1,5 +1,20 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
+namespace: default
+replicas:
+  - name: multi-client
+    count: 3
+  - name: multi-worker
+    count: 1
+  - name: multi-server
+    count: 3
+images:
+  - name: sonergezgen/client
+    newTag: latest
+  - name: sonergezgen/worker
+    newTag: latest
+  - name: sonergezgen/server
+    newTag: latest
+resources:
   - ../../../k8_files
