remove kustomization temp

--- a/k8_files/kustomization.yaml
+++ b/k8_files/kustomization.yaml
@@ -1,14 +1,14 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-resources:
-  - client-cluster-ip-service.yaml
-  - client-deployment.yaml
-  - database-persistent-volume-claim.yaml
-  - ingress-service.yaml
-  - postgres-cluster-ip-service.yaml
-  - postgres-deployment.yaml
-  - redis-cluster-ip-service.yaml
-  - redis-deployment.yaml
-  - server-cluster-ip-service.yaml
-  - server-deployment.yaml
-  - worker-deployment.yaml
+#apiVersion: kustomize.config.k8s.io/v1beta1
+#kind: Kustomization
+#resources:
+#  - client-cluster-ip-service.yaml
+#  - client-deployment.yaml
+#  - database-persistent-volume-claim.yaml
+#  - ingress-service.yaml
+#  - postgres-cluster-ip-service.yaml
+#  - postgres-deployment.yaml
+#  - redis-cluster-ip-service.yaml
+#  - redis-deployment.yaml
+#  - server-cluster-ip-service.yaml
+#  - server-deployment.yaml
+#  - worker-deployment.yaml
