--- a/environments/PROD/multi-k8/kustomization.yaml
+++ b/environments/PROD/multi-k8/kustomization.yaml
@@ -1,10 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
+resources:
+  - ../../../k8_files #Pointing to our manifests. 
+                      #(kustomization.yaml should be present in this directory. (generated with 'kustomoze build'))
 namespace: default
 replicas:
-  - name: client-deployment
-    count: 3
+  - name: client-deployment #Name of our deployment (look at client-deployment.yaml file)
+    count: 3 #This count variable overrides the 'replicas' parameter in your deployment. (this value always comes first)
   - name: worker-deployment
     count: 1
   - name: server-deployment
@@ -16,5 +18,4 @@ images:
     newTag: latest
   - name: sonergezgen/multi-server
     newTag: latest
-resources:
-  - ../../../k8_files
+
