--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,10 +87,12 @@ jobs:
             docker push sonergezgen/multi-worker:${BUILD_ID}
 
       - run:
-          name: Deployment for Kubernetes
+          name: Kustomize Deployment for Kubernetes
           command: |
             export BUILD_ID=$(echo ${CIRCLE_BUILD_URL} | cut -d'/' -f 7)
-            kubectl apply -k environments/PROD/multi-k8
+            sed -i "s/\$(TAG)/${BUILD_ID}/g" environments/PROD/k8-multi/kustomization.yaml
+            cat environments/PROD/k8-multi/kustomization.yaml
+            #kubectl apply -k environments/PROD/multi-k8
             #kubectl apply -f k8_files
             #kubectl set image deployments/client-deployment client=sonergezgen/multi-client:${BUILD_ID}
             #kubectl set image deployments/server-deployment server=sonergezgen/multi-server:${BUILD_ID}
