test tagging kustomization final

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,7 @@ jobs:
             export BUILD_ID=$(echo ${CIRCLE_BUILD_URL} | cut -d'/' -f 7)
             sed -i "s/\$(TAG)/${BUILD_ID}/g" environments/PROD/multi-k8/kustomization.yaml
             cat environments/PROD/multi-k8/kustomization.yaml
-            #kubectl apply -k environments/PROD/multi-k8
+            kubectl apply -k environments/PROD/multi-k8
             #kubectl apply -f k8_files
             #kubectl set image deployments/client-deployment client=sonergezgen/multi-client:${BUILD_ID}
             #kubectl set image deployments/server-deployment server=sonergezgen/multi-server:${BUILD_ID}
