--- a/environments/PROD/multi-k8/kustomization.yaml
+++ b/environments/PROD/multi-k8/kustomization.yaml
@@ -12,10 +12,10 @@ replicas:
   - name: server-deployment
     count: 3
 images:
-  - name: sonergezgen/multi-client
-    newTag: $(TAG) #This value will be replaced with the circliCI buildID
-  - name: sonergezgen/multi-worker
-    newTag: $(TAG)
-  - name: sonergezgen/multi-server
-    newTag: $(TAG)
+  - name: sonergezgen/multi-client:$(TAG)
+    newTag: "$(TAG)" #This value will be replaced with the circliCI buildID
+  - name: sonergezgen/multi-worker:$(TAG)
+    newTag: "$(TAG)"
+  - name: sonergezgen/multi-server:$(TAG)
+    newTag: "$(TAG)"
 
