--- a/k8_files/client-deployment.yaml
+++ b/k8_files/client-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec: 
       containers:
       - name: client
-        image: sonergezgen/multi-client:latest
+        image: sonergezgen/multi-client:($TAG)
         ports:
         - containerPort: 3000
