--- a/k8_files/server-deployment.yaml
+++ b/k8_files/server-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec: 
       containers:
       - name: server
-        image: sonergezgen/multi-server:($TAG)
+        image: sonergezgen/multi-server:$(TAG)
         ports:
         - containerPort: 5000
         env:
