test tagging kustomization-12

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,13 +91,13 @@ jobs:
           command: |
             export BUILD_ID=$(echo ${CIRCLE_BUILD_URL} | cut -d'/' -f 7)
 
-            sed -i "s/\$(TAG)/${BUILD_ID}/g" environments/PROD/multi-k8/kustomization.yaml
-            cat environments/PROD/multi-k8/kustomization.yaml
+            #sed -i "s/\$(TAG)/${BUILD_ID}/g" environments/PROD/multi-k8/kustomization.yaml
+            #cat environments/PROD/multi-k8/kustomization.yaml
 
-            find k8_files -type f -exec sed -i "s/\$(TAG)/${BUILD_ID}/g" {} \;
-            cat k8_files/client-deployment.yaml
-            cat k8_files/server-deployment.yaml
-            cat k8_files/worker-deployment.yaml
+            #find k8_files -type f -exec sed -i "s/\$(TAG)/${BUILD_ID}/g" {} \;
+            #cat k8_files/client-deployment.yaml
+            #cat k8_files/server-deployment.yaml
+            #cat k8_files/worker-deployment.yaml
 
             kubectl apply -k environments/PROD/multi-k8
             #kubectl apply -f k8_files
