--- a/k8_files/client-deployment.yaml
+++ b/k8_files/client-deployment.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
       - name: client
         image: sonergezgen/multi-client
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
