--- a/k8_files/server-deployment.yaml
+++ b/k8_files/server-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: server
         image: sonergezgen/multi-server
+        imagePullPolicy: Always
         ports:
         - containerPort: 5000
         env:
