--- a/k8_files/worker-deployment.yaml
+++ b/k8_files/worker-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: worker
         image: sonergezgen/multi-worker
+        imagePullPolicy: Always
         env:
         - name: REDIS_HOST
           value: redis-cluster-ip-service
