--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,10 @@ jobs:
           name: Kustomize Deployment for Kubernetes
           command: |
             export BUILD_ID=$(echo ${CIRCLE_BUILD_URL} | cut -d'/' -f 7)
+            
+            wget https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv3.8.5/kustomize_v3.8.5_linux_amd64.tar.gz
+            tar zxf kustomize_v3.8.5_linux_amd64.tar.gz 
+            sudo mv  kustomize /usr/local/bin
 
             #sed -i "s/\$(TAG)/${BUILD_ID}/g" environments/PROD/multi-k8/kustomization.yaml
             #cat environments/PROD/multi-k8/kustomization.yaml
