--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,9 +91,25 @@ jobs:
           command: |
             export BUILD_ID=$(echo ${CIRCLE_BUILD_URL} | cut -d'/' -f 7)
 
-            wget https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv3.8.5/kustomize_v3.8.5_linux_amd64.tar.gz
-            tar zxf kustomize_v3.8.5_linux_amd64.tar.gz 
-            sudo mv  kustomize /usr/local/bin
+            if command -v kustomize &> /dev/null
+            then
+              echo "Kustomize is already installed."
+              kustomize version
+              kustomize edit set image client=sonergezgen/multi-client:${BUILD_ID}
+              kustomize edit set image server=sonergezgen/multi-server:${BUILD_ID}
+              kustomize edit set image worker=sonergezgen/multi-worker:${BUILD_ID}
+              kubectl apply -k environments/PROD/multi-k8
+              #cd environments/PROD/multi-k8
+            else
+              wget https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv3.8.5/kustomize_v3.8.5_linux_amd64.tar.gz
+              tar zxf kustomize_v3.8.5_linux_amd64.tar.gz 
+              sudo mv  kustomize /usr/local/bin
+              kustomize edit set image client=sonergezgen/multi-client:${BUILD_ID}
+              kustomize edit set image server=sonergezgen/multi-server:${BUILD_ID}
+              kustomize edit set image worker=sonergezgen/multi-worker:${BUILD_ID}
+              kubectl apply -k environments/PROD/multi-k8
+              #cd environments/PROD/multi-k8
+            fi
 
             #sed -i "s/\$(TAG)/${BUILD_ID}/g" environments/PROD/multi-k8/kustomization.yaml
             #cat environments/PROD/multi-k8/kustomization.yaml
@@ -103,15 +119,10 @@ jobs:
             #cat k8_files/server-deployment.yaml
             #cat k8_files/worker-deployment.yaml
 
-            kubectl apply -k environments/PROD/multi-k8
-            cd environments/PROD/multi-k8
-            kustomize edit set image client=sonergezgen/multi-client:${BUILD_ID}
-            kustomize edit set image server=sonergezgen/multi-server:${BUILD_ID}
-            kustomize edit set image worker=sonergezgen/multi-worker:${BUILD_ID}
-
             #kubectl rollout restart deployment/client-deployment -n default
             #kubectl rollout restart deployment/server-deployment -n default
             #kubectl rollout restart deployment/worker-deployment -n default
+
             #kubectl apply -f k8_files
             #kubectl set image deployments/client-deployment client=sonergezgen/multi-client:${BUILD_ID}
             #kubectl set image deployments/server-deployment server=sonergezgen/multi-server:${BUILD_ID}
